Bug 36455727 - [36455326->24.09] include xsd processing silently fails with JDK22 with -Djdk.xml.jdkcatalog.resolve=strict Remote remote.distribution on coherence-ce/main success, changes 108051, job.9.20240329183048.7048
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 108084]